--- a/scormcontent/index.html
+++ b/scormcontent/index.html
@@ -7,10 +7,10 @@
 
     <title>Trade Show Staff Training </title>
 
-    <link type="text/css" rel="stylesheet" href="lib/icomoon.css">
-    <link type="text/css" rel="stylesheet" href="lib/main.bundle.css">
-    <script type="text/javascript" src="lib/player-0.0.11.min.js"></script>
-    <script type="text/javascript" src="lib/lzwcompress.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://oasisc-maker.github.io/Trade_Show_Staff_Training/scormcontent/lib/icomoon.css">
+    <link type="text/css" rel="stylesheet" href="https://oasisc-maker.github.io/Trade_Show_Staff_Training/scormcontent/lib/main.bundle.css">
+    <script type="text/javascript" src="https://oasisc-maker.github.io/Trade_Show_Staff_Training/scormcontent/lib/player-0.0.11.min.js"></script>
+    <script type="text/javascript" src="https://oasisc-maker.github.io/Trade_Show_Staff_Training/scormcontent/lib/lzwcompress.js"></script>
 
     <!-- Resize Hack -->
     <script type="text/javascript">
@@ -442,11 +442,11 @@ function reportScore(score) {
 }
 
 function resolvePath(path) {
-  return ('assets/').concat(path);
+  return ('https://oasisc-maker.github.io/Trade_Show_Staff_Training/scormcontent/assets/').concat(path);
 }
 
 function resolveFontPath(font) {
-  return ('lib/fonts/').concat(font.key.split('/').reverse()[0]);
+  return ('https://oasisc-maker.github.io/Trade_Show_Staff_Training/scormcontent/lib/fonts/').concat(font.key.split('/').reverse()[0]);
 }
 
 function setLessonProgress(lessonProgress) {
@@ -516,7 +516,7 @@ root.Runtime = {
 </script>
 
     
-    <script src="lib/main.bundle.js"></script>
+    <script src="https://oasisc-maker.github.io/Trade_Show_Staff_Training/scormcontent/lib/main.bundle.js"></script>
     
   </body>
 </html>
